--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "misskey",
 	"author": "syuilo <syuilotan@yahoo.co.jp>",
-	"version": "12.65.2-nj",
+	"version": "12.65.2-nj.1",
 	"codename": "indigo",
 	"repository": {
 		"type": "git",
