--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "misskey",
-	"version": "12.96.1",
+	"version": "12.96.1-nj",
 	"codename": "indigo",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/misskey-dev/misskey.git"
+		"url": "https://github.com/TeamNijimiss/misskey.git"
 	},
 	"private": true,
 	"scripts": {
